<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_event_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EventDetails"
    tools:showIn="@layout/activity_event_details">

    <include
        android:id="@+id/active_status_container"
        layout="@layout/active_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/active_status_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/meeting_name"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:editable="false"
                    android:focusable="false"
                    android:text="Meeting Name"
                    android:textSize="30sp" />
            </android.support.design.widget.TextInputLayout>
            <!-- above android:text should be changed to an @string with %s to automatically update Meeting Name-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/date"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:editable="false"
                    android:focusable="false"
                    android:inputType="date"
                    android:text="Date: " />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/time"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:editable="false"
                    android:focusable="false"
                    android:text="Time: "
                    android:inputType="time" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/duration"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:text="Duration:" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/notes"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:editable="false"
                    android:focusable="false"
                    android:text="Additional Notes: "/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/add_attachments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Attachment" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Location Details"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/street"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:editable="false"
                    android:focusable="false"
                    android:text="Street Address:"/>

            </android.support.design.widget.TextInputLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="272dp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/city"
                        style="@style/Widget.MaterialComponents.TabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:editable="false"
                        android:focusable="false"
                        android:text="City: "/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="117dp"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/state"
                        style="@style/Widget.MaterialComponents.TabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:editable="false"
                        android:focusable="false"
                        android:text="State: "/>
                </android.support.design.widget.TextInputLayout>
            </TableRow>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/room_num"
                    style="@style/Widget.MaterialComponents.TabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:editable="false"
                    android:focusable="false"
                    android:text="Room #: "/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/view_attendees_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="View Attendees" />

            <Button
                android:id="@+id/suggest_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details_suggest_button" />

            <Button
                android:id="@+id/map_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/map" />

            <Button
                android:id="@+id/leave_event_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave_button"
                android:visibility="invisible" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>